[workspace]
members = [
  "programs/adrastia-chainlink-data-streams-feed-solana",
  "programs/adrastia-chainlink-data-streams-feed-updater-solana",
]
resolver = "2"

[profile.release]
overflow-checks = true
lto = "fat"
codegen-units = 1
[profile.release.build-override]
opt-level = 3
incremental = false
codegen-units = 1

[workspace.dependencies]
solana-program = "=2.1.0"
solana-sdk = "=2.1.0"
solana-zk-token-sdk = "=2.1.0"
