[package]
name = "adrastia-chainlink-data-streams-feed-solana"
version = "0.1.0"
description = "Created with Anchor"
edition = "2021"

[lib]
crate-type = ["cdylib", "lib"]
name = "adrastia_chainlink_data_streams_feed_solana"

[features]
default = []
cpi = ["no-entrypoint"]
no-entrypoint = []
no-idl = []
no-log-ix-name = []
idl-build = ["anchor-lang/idl-build"]

[dependencies]
chainlink_solana_data_streams = { git = "https://github.com/adrastia-oracle/chainlink-solana", branch = "adrastia/solana-2.1", subdir = "contracts/crates/chainlink-solana-data-streams" }
data-streams-report = { git = "https://github.com/smartcontractkit/data-streams-sdk", package = "chainlink-data-streams-report", subdir = "rust/crates/report" }

# Additional required dependencies
anchor-lang = { version = "0.31.1", features = ["init-if-needed"] }
# DO NOT pin a different solana-program here; use the workspace one:
solana-program = { workspace = true }
num-traits = "0.2"
bytemuck = { version = "1.14", features = ["derive"] }